# OpenGl

./: first  matricesEscalaRotacionTraslacion.h
OwnProjects/: CMakeLists.txt
OwnProjects/Parcial/: Parcial.cpp
OwnProjects/Project_00/: CMakeLists.txt  glad.c  main.cpp
OwnProjects/Project_01/: main.cpp
OwnProjects/Project_02/: CMakeLists.txt  main.cpp
Project_01/Project_01/: glad.c  main.cpp
